--- a/style.css
+++ b/style.css
@@ -1,39 +1,44 @@
 body {
   font-family: "Open Sans", sans-serif;
-  text-align: end;
+  text-align: center;
   margin: 0;
+}
+
+img{
+  margin-bottom: 72px;
 }
 
 #hero {
     width: 592px;
-    margin: 72px;
+    margin: 0 auto 72px;
 }
 
-img {
-    margin: 100px;
-}
 
 h1 {
   font-family: "Inter", sans-serif;
   font-size: 49px;
   line-height: 56px;
   font-weight: normal;
+  margin-bottom: 32px;
 }
 
 h1 span {
   font-weight: bold;
-
-  margin-bottom: 32px;
 }
 
 span, a {
   color: #ff9900;
 }
 
-p, #footer {
+p{
+  margin-top: 32px;
   color: #7d7987;
   font-size: 14px;
   line-height: 28px;
+}
+
+#footer {
+  margin-top: 8px;
 }
 
 #footer a + a {
@@ -44,13 +49,14 @@ p, #footer {
     width: 568px;
     height: 0;
 
-    margin: 0 8px;
+    margin: 0 auto 8px;
 
     border: 1px solid #ECEFF2;
 }
 
 #balls {
     position: fixed;
-    top: 0;
+    bottom: 0;
     right: 0;
 }
+
